--- a/main.html
+++ b/main.html
@@ -7,7 +7,33 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<header>
+		<h1>Ayali</h1>
+		<nav>
+			<a id="nav-actor" href="#actor">Actors</a>
+			<a id="nav-quote" href="#quote">Quotes</a>
+		</nav>
+		<summary>The eight-episode series begins with an animated sequence that tells the fable of how the village of Veerapannai came to be. As per the legend, when a young girl from the village of Pannaiyur eloped with a man from a neighbouring village, the folk were subjected to the wrath of their deity, Ayali, leading to the entire village relocating to a new place in Pudukottai district that later came to be known as Veerapannai. In the new village, they built a temple for Ayali and decided that from thereon, all girls from the village would have to get married immediately after she attains puberty. Jump to 1990, and we see how this custom is used to oppress women.</summary>
+		
+	</header>
+	<main>
+		<section id="actor">
+			<p>
+				Thamizh (Abi Natchatra), a young ninth-grader who questions the lack of sense in these practices, is our protagonist. Thamizh desires to become a doctor, but fear grips her when she sees her classmates get married off one by one, only to suffer later. So when she attains puberty, she hatches a plan to keep her dreams alive — she hides it from literally everyone. Much of the initial episodes revolve around how Thamizh goes ahead with her plan and becomes the only girl child in the village to enter a tenth-grade classroom.
+			</p>
+		</section>
+		<section id="quote">
+			<p>
+				Ayali is built through its emotional beats, and there is enough substance and thrill to keep you engrossed. At the centre of all the drama is also a beautiful story about a daughter and a mother, and how women are forced to come together when pushed to the extreme. In multiple tear-jerking instances, the constant lump in our throat tightens; like when we realise that a mere bus ride to a nearby town was a once-in-a-lifetime opportunity for some, or when a father realises what true love is. Or when a subplot shows two elderly step-wives, who are usually bickering at each other, sharing a nice moment. Or in the story of Thamizh’s friends who are forced to get married.
+			</p>
+		</section>
+	</main>
+	<aside>
+		<span><b>Imdb Rating:</b>8.9/10</span>
+	</aside>
+	<footer>
+		<span><b>Produced by:</b>&lt Kushmavathi &gt</span>
+	</footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
